tests/ui/contracts/error/precondition-is-not-an-expression.stderr
warning: unused import: `abort_call_site`
 --> src/server_send/analyze.rs
  |
  | use proc_macro_error::{abort, abort_call_site};
  |                               ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `FromMeta`
 --> src/server_send/parsed.rs
  |
  | use darling::{FromMeta};
  |               ^^^^^^^^

warning: field is never read: `level`
  --> src/server_send/parsed.rs
   |
   |     level: Option<String>,
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: field is never read: `name`
  --> src/server_send/parsed.rs
   |
   |     name: Option<String>,
   |     ^^^^^^^^^^^^^^^^^^^^

warning: field is never read: `skip`
  --> src/server_send/parsed.rs
   |
   |     skip: Option<String>,
   |     ^^^^^^^^^^^^^^^^^^^^

warning: field is never read: `fields`
  --> src/server_send/parsed.rs
   |
   |     fields: Option<String>,
   |     ^^^^^^^^^^^^^^^^^^^^^^

warning: associated function is never used: `skip_params`
  --> src/server_send/parsed.rs
   |
   |     fn skip_params(&self) -> Vec<String> {
   |        ^^^^^^^^^^^

warning: associated function is never used: `fields_params`
  --> src/server_send/parsed.rs
   |
   |     fn fields_params(&self) -> Vec<String> {
   |        ^^^^^^^^^^^^^

error: expected an expression as argument

         = help: example syntax: `#[precondition(argument % 2 == 0)]`

 --> tests/ui/contracts/error/precondition-is-not-an-expression.rs:4:15
  |
4 | #[precondition(struct)]
  |               ^^^^^^^^
